[gd_scene load_steps=10 format=2]

[ext_resource path="res://Sprites/transitions/childRoom.png" type="Texture" id=1]
[ext_resource path="res://Scene/Game_Scene.gd" type="Script" id=2]
[ext_resource path="res://Scene/LanguageSwapper.gd" type="Script" id=3]
[ext_resource path="res://fonts/LargePixel.tres" type="Theme" id=4]
[ext_resource path="res://Scene/ButtonHover.gd" type="Script" id=5]
[ext_resource path="res://fonts/Pixel.theme" type="Theme" id=6]
[ext_resource path="res://Scene/TransitionAnimPlayer.gd" type="Script" id=7]

[sub_resource type="Animation" id=1]
resource_name = "FadeInText"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Button/RichTextLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ChapterName:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ChapterName:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Button/RichTextLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ChapterName:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="ChildTransition" type="Node2D"]
position = Vector2( -1, -9 )
script = ExtResource( 2 )
next_level = "res://Scene/Tutorial/Tutorial1.tscn"
music = "none"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FadeInText = SubResource( 1 )
anims/RESET = SubResource( 2 )
script = ExtResource( 7 )

[node name="ChildRoom" type="Sprite" parent="."]
position = Vector2( 480, 279 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="ChapterName" type="RichTextLabel" parent="."]
margin_left = 5.0
margin_top = 22.0
margin_right = 354.0
margin_bottom = 299.0
theme = ExtResource( 4 )
text = "Chapter 1:
Leaving Childhood Behind"
script = ExtResource( 3 )
english_text = "Chapter 1:
Leaving Childhood Behind"
JP_text = "第一章：さいしょのおひっこし"

[node name="Button" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 18.0
margin_top = 347.0
margin_right = 202.0
margin_bottom = 392.0
theme = ExtResource( 4 )
script = ExtResource( 5 )

[node name="RichTextLabel" type="RichTextLabel" parent="Button"]
margin_right = 399.0
margin_bottom = 87.0
mouse_filter = 2
theme = ExtResource( 6 )
custom_colors/selection_color = Color( 1, 0.14902, 0.14902, 1 )
text = "Start Packing"
script = ExtResource( 3 )
english_text = "Start Packing"
JP_text = "にづくりかいし"

[connection signal="mouse_entered" from="Button" to="Button" method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="Button" method="_on_Button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_NextLevelButton_pressed"]
